change files to build tests

--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -43,7 +43,7 @@ jobs:
           restore-keys: ${{ runner.os }}-gradle
 
       - name: Build and run tests
-        run: ./gradlew clean build jacocoTestReport
+        run: ./gradlew clean build jacocoTestReport -Dspring.profiles.active=test
 
       - name: Build and analyze
         env:
