--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -20,3 +20,5 @@ spring.flyway.enabled=false
 # Logging Configuration
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
+logging.level.org.springframework=DEBUG
+logging.level.org.hibernate=DEBUG
