--- a/src/test/resources/application-test.properties
+++ b/src/test/resources/application-test.properties
@@ -14,11 +14,13 @@ spring.jpa.hibernate.ddl-auto=create-drop
 spring.jpa.show-sql=true
 spring.jpa.properties.hibernate.format_sql=true
 
+# Disable Redis for tests
+spring.data.redis.enabled=false
+spring.cache.type=simple
+
 # Flyway Configuration for Tests
 spring.flyway.enabled=false
 
 # Logging Configuration
 logging.level.org.hibernate.SQL=DEBUG
 logging.level.org.hibernate.type.descriptor.sql.BasicBinder=TRACE
-logging.level.org.springframework=DEBUG
-logging.level.org.hibernate=DEBUG
