--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -9,18 +9,13 @@ on:
 
 jobs:
   build:
-    name: Build and analyze
+    name: Build, test, analyze and deploy
     runs-on: ubuntu-latest
-
-    env:
-      SPRING_DATASOURCE_URL: ${{ secrets.SPRING_DATASOURCE_URL }}
-      SPRING_DATASOURCE_USERNAME: ${{ secrets.SPRING_DATASOURCE_USERNAME }}
-      SPRING_DATASOURCE_PASSWORD: ${{ secrets.SPRING_DATASOURCE_PASSWORD }}
 
     steps:
       - uses: actions/checkout@v4
         with:
-          etch-depth: 0
+          fetch-depth: 0
 
       - name: Set up JDK 17
         uses: actions/setup-java@v4
@@ -42,14 +37,20 @@ jobs:
           key: ${{ runner.os }}-gradle-${{ hashFiles('**/*.gradle') }}
           restore-keys: ${{ runner.os }}-gradle
 
-      - name: Build and run tests
+      ##############################
+      # 🔬 Testes com H2 (profile test)
+      ##############################
+      - name: Run tests with H2 (profile: test)
         run: ./gradlew clean build jacocoTestReport -Dspring.profiles.active=test
 
-      - name: Build and analyze
+      - name: Build and analyze with SonarQube
         env:
           SONAR_TOKEN: ${{ secrets.SONAR_TOKEN }}
         run: ./gradlew build sonar --info
 
+      ##############################
+      # ☁️ Deploy para EKS (profile: prod)
+      ##############################
       - name: Configure AWS credentials
         uses: aws-actions/configure-aws-credentials@v2
         with:
@@ -61,6 +62,12 @@ jobs:
         run: aws eks update-kubeconfig --region us-east-1 --name eks-cluster
 
       - name: Render Kubernetes deployment with envsubst
+        env:
+          SPRING_DATASOURCE_URL: ${{ secrets.SPRING_DATASOURCE_URL }}
+          SPRING_DATASOURCE_USERNAME: ${{ secrets.SPRING_DATASOURCE_USERNAME }}
+          SPRING_DATASOURCE_PASSWORD: ${{ secrets.SPRING_DATASOURCE_PASSWORD }}
+          SPRING_REDIS_HOST: ${{ secrets.SPRING_REDIS_HOST }}
+          SPRING_REDIS_PORT: ${{ secrets.SPRING_REDIS_PORT }}
         run: |
           envsubst < k8s/app-deployment-template.yaml > k8s/app-deployment.yaml
 
