--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -63,8 +63,8 @@ jobs:
           SPRING_DATASOURCE_URL: ${{ secrets.SPRING_DATASOURCE_URL }}
           SPRING_DATASOURCE_USERNAME: ${{ secrets.SPRING_DATASOURCE_USERNAME }}
           SPRING_DATASOURCE_PASSWORD: ${{ secrets.SPRING_DATASOURCE_PASSWORD }}
-          SPRING_REDIS_HOST: ${{ secrets.SPRING_REDIS_HOST }}
-          SPRING_REDIS_PORT: ${{ secrets.SPRING_REDIS_PORT }}
+
+      - name: Render Kubernetes deployment with envsubst
         run: |
           envsubst < k8s/app-deployment-template.yaml > k8s/app-deployment.yaml
 
